1A/S6/C/langage-c-sem-6-projet/checkerror.log
Vérification de la syntaxe pour liste_noeud.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.h
Vérification de la syntaxe pour liste_noeud.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c liste_noeud.c
Vérification de la syntaxe pour dijkstra.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.h
Vérification de la syntaxe pour dijkstra.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c dijkstra.c

[le header liste_noeud.h est correctement gardé]
==code

==endcode
In file included from <stdin>:2:
__tmp_liste_noeud.h:7:8: error: redefinition of 'struct liste_noeud_t'
    7 | struct liste_noeud_t{
      |        ^~~~~~~~~~~~~
In file included from <stdin>:1:
__tmp_liste_noeud.h:7:8: note: originally defined here
    7 | struct liste_noeud_t{
      |        ^~~~~~~~~~~~~
In file included from <stdin>:2:
__tmp_liste_noeud.h:21:18: error: redefinition of 'x'
   21 | static const int x = 1;
      |                  ^
In file included from <stdin>:1:
__tmp_liste_noeud.h:21:18: note: previous definition of 'x' was here
   21 | static const int x = 1;
      |                  ^

[Définition de liste_noeud_t]
==code
liste_noeud_t* t; (void) t;
==endcode

[liste_noeud_t abstrait]
==code
liste_noeud_t t; (void) t;
==endcode

[est_vide_lsite const-correcte]
==code
const liste_noeud_t* t = creer_liste(); est_vide_liste(t);
==endcode

[contient_noeud_liste const-correcte]
==code
const liste_noeud_t* t = creer_liste(); contient_noeud_liste(t, (noeud_id_t) 0);
==endcode

[contient_arrete_liste const-correcte]
==code
const liste_noeud_t* t = creer_liste(); contient_arrete_liste(t, (noeud_id_t) 0, (noeud_id_t) 0);
==endcode

[distance_noeud_liste const-correcte]
==code
const liste_noeud_t* t = creer_liste(); distance_noeud_liste(t, (noeud_id_t)0);
==endcode

[precedent_noeud_liste const-correcte]
==code
const liste_noeud_t* t = creer_liste(); precedent_noeud_liste(t, (noeud_id_t) 0);
==endcode

[min_noeud_liste const-correcte]
==code
const liste_noeud_t* t = creer_liste(); min_noeud_liste(t);
==endcode

[construire_chemin statique]
==code
construire_chemin_vers(NULL, NULL, 0);
==endcode
<stdin>: In function 'test':
<stdin>:4:1: error: implicit declaration of function 'construire_chemin_vers' [-Werror=implicit-function-declaration]
cc1: all warnings being treated as errors
